examples/components/error/error-message-radio.njk
{% from "components/radiobuttons/radiobuttons.njk" import radiobuttons as radiobuttons %}

{{
    radiobuttons({
        "id": "radiogroup-error",
        "groupname": "sagen-omhandler",
        "radiogroupLegend": "Sagen handler om",
        "errorMessage": "Vælg hvad sagen handler om",
        "items": [
            {
                "value": "ulykkesforsikring",
                "label": "Ulykkesforsikring"
            },
            {
                "value": "erstatningsansvar",
                "label": "Erstatningsansvar"
            },
            {
                "value": "forsikringsselskab",
                "label": "Forsikringsselskab"
            }
        ]
    })
}}